...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/sortDate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mauve"
        android:gravity="center"
        android:onClick="dateSort"
        android:text="Sort by Date"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
         />

    <Button
        android:id="@+id/sortCost"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/mauve"
        android:gravity="center"
        android:onClick="costSort"
        android:text="Sort by Cost"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        />

    <Button
        android:id="@+id/sortAlphabet"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/mauve"
        android:gravity="center"
        android:onClick="alphabetSort"
        android:text="Sort by Alphabet"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sortDate"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        />

...
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/sortCost"
        />

    <Button
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/matte"
        android:gravity="center"
        android:onClick="rerouteBack"
        android:text="Back"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/guidelineBack"
        />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.2" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="@id/guideline"
        android:gravity="center_horizontal"
        android:background="@color/lightBlue"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
...
