...
        android:gravity="center"
        android:text="Category:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRangeEnd" />

    <Spinner
        android:id="@+id/sortCategories"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryTitle" />


    <Button
        android:id="@+id/searchButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/mauve"
        android:gravity="center"
        android:onClick="rerouteToResults"
        android:text="Find Events"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortCategories" />


...
